@@ -1,5 +1,9 @@
 2000-09-23  Joseph S. Myers  <jsm28@cam.ac.uk>
 
+	* battlestar/parse.c: Make local functions static.
+	* battlestar/extern.h: Remove declarations of functions now static
+	in parse.c.
+
 	* battlestar/com4.c (eat): Check first for having the object to be
 	eaten, then for needing a knife, then for being stuffed.  Also
 	give a better message for things it doesn't make sense to eat.
